src/test/resources/private/typechecking/pass/member_access/member_06.jova
class Test3{
    public int tt;
}

class Test2{
private Test3 t3;
    public Test3 tmp(Test2 tt, int x, string y, bool z) {
       return t3;
    }
}

class Test{
public int x;
public Test2 t2;

  public int testing() {
    return 0;
  }

}

class Main2 {
   private Test test;
   private Test2 t;
   public string str;
   private bool boo;

   private int testing(int x) {
        int t;
        return this.test.t2.tmp(this.t, t, str, boo).tt;

   }

  public int main22() {
    int test;
    int t;

    this.test.x = this.test.testing();
    this.test.x = this.test.t2.tmp(this.t, t, str, boo).tt;
    this.test.x = this.testing(this.test.t2.tmp(this.t, t, str, boo).tt);


    return this.test.x;
  }

}