src/test/resources/private/typechecking/fail/return/fail01.jova
class Test{
    private int func1(){
        return 0;
    }
	
	public bool func2(){
        return false;
    }

}

class Test2 {

  public string main() {
    Test t;
    t = new Test;
    return t.func2();
  }
  
}